prd_package/objects/MD_Appraisal_Subject__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <formula>MD_Appraisal_Form__r.Is_Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MD_Appraisal_Form__c</fullName>
        <label>MD Appraisal Form</label>
        <referenceTo>MD_Appraisal_Form__c</referenceTo>
        <relationshipLabel>MD Appraisal Subjects</relationshipLabel>
        <relationshipName>MD_Appraisal_Subjects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MD_Appraisal_Subject_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>MD Appraisal Subject External ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rating</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MD Appraisal Subject</label>
    <nameField>
        <label>MD Appraisal Subject Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MD Appraisal Subjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>